--- a/_posts/0000-01-02-tkim294.md
+++ b/_posts/0000-01-02-tkim294.md
@@ -1,6 +1,5 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our tkim294 slide!"
 ---
-This is githubteacher's slide
 Use the left arrow to go back!
